# MicroChat

common/: channel.hpp  elasearch.hpp  etcd.hpp  spdlog.hpp
src/server/: .gitignore  CMakeLists.txt  README.md  depends.sh  docker-compose.es-ik.yml  docker-compose.yml  entrypoint.sh
src/server/common/: channel.hpp  elasearch.hpp  es_manager.hpp  etcd.hpp  http.hpp  mysql.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_friend_request.hpp  mysql_message.hpp  mysql_message_outbox.hpp  mysql_relation.hpp  mysql_user.hpp  rabbitmq.hpp  redis_manager.hpp  server.hpp  spdlog.hpp  speech.hpp  utils.hpp
src/server/conf/: file_server.conf  forward_server.conf  friend_server.conf  gateway_server.conf  message_server.conf  speech_server.conf  user_server.conf
src/server/elasticsearch-ik/: Dockerfile  README.md
src/server/file/: CMakeLists.txt  dockerfile  file_server.cc  file_server.hpp
src/server/forward/: CMakeLists.txt  dockerfile  forward_server.cc  forward_server.hpp
src/server/friend/: CMakeLists.txt  dockerfile  friend_server.cc  friend_server.hpp
src/server/gateway/: CMakeLists.txt  connection.hpp  dockerfile  gateway_server.cc  gateway_server.hpp
src/server/message/: CMakeLists.txt  dockerfile  message_server.cc  message_server.hpp
src/server/odb/: chat_session.hxx  chat_session_member.hxx  friend_request.hxx  message.hxx  message_outbox.hxx  relation.hxx  user.hxx
src/server/proto/: base.proto  file.proto  forward.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  user.proto
src/server/speech/: CMakeLists.txt  dockerfile  speech_server.cc  speech_server.hpp
src/server/speech/test/: speech_client.cc
src/server/sql/: chat_session.sql  chat_session_member.sql  friend_request.sql  message.sql  message_outbox.sql  relation.sql  user.sql
src/server/user/: CMakeLists.txt  dockerfile  user_server.cc  user_server.hpp
